--- a/css/style_galerias.css
+++ b/css/style_galerias.css
@@ -1,5 +1,5 @@
 :root {
-    --cor-principal: #0453a5; /* Azul primário */
+    --cor-principal: #ffffff; /* Azul primário */
     --cor-secundaria: #f5f5f5; /* Verde de destaque */
     --cor-texto-principal: #000000; /* Cinza escuro */
     --cor-fundo-claro: rgb(255, 255, 255); /* Cinza claro para fundos */
