--- a/css/style_contato.css
+++ b/css/style_contato.css
@@ -1,13 +1,10 @@
 :root {
-    --cor-principal: #0453a5;
-    /* Azul primário */
-    --cor-secundaria: #f5f5f5;
-    /* Verde de destaque */
-    --cor-texto-principal: #000000;
-    /* Cinza escuro */
-    --cor-fundo-claro: rgb(255, 255, 255);
-    /* Cinza claro para fundos */
+    --cor-principal: #0453a5; /* Azul primário */
+    --cor-secundaria: #f5f5f5; /* Verde de destaque */
+    --cor-texto-principal: #000000; /* Cinza escuro */
+    --cor-fundo-claro: rgb(255, 255, 255); /* Cinza claro para fundos */
     --cor-branca: #FFFFFF;
+    --cor-verde: #456144;
 }
 h2{
     color:var(--cor-principal)
