--- a/css/style_galerias.css
+++ b/css/style_galerias.css
@@ -1,33 +1,34 @@
 :root {
-    --cor-principal: #0453a5; 
-    --cor-secundaria: #f5f5f5; 
-    --cor-texto-principal: #000000; 
-    --cor-fundo-claro: rgb(255, 255, 255); 
+    --cor-principal: #0453a5;
+    --cor-secundaria: #f5f5f5;
+    --cor-texto-principal: #000000;
+    --cor-fundo-claro: rgb(255, 255, 255);
     --cor-branca: #FFFFFF;
     --cor-verde: #456144;
 }
 
-.central{
+.central {
     margin-bottom: 0%;
     background-color: var(--cor-principal);
     color: white;
     height: 2rem;
     font-size: 1.0rem;
 }
-div>h3.central{
+
+div>h3.central {
     padding-left: 0.6rem;
     padding-top: 0.2rem;
 }
 
 .navbar-nav-custom .nav-link:hover,
 .navbar-nav-custom .nav-link.active {
-    color: var(--cor-principal) !important; 
+    color: var(--cor-principal) !important;
 }
 
 
 
 .navbar-custom {
-    background-color: #f8f9fa; 
+    background-color: #f8f9fa;
     border-bottom: 1px solid #dee2e6;
     padding: 10px 0;
     width: 100%;
@@ -44,37 +45,37 @@ div>h3.central{
 }
 
 .navbar-logo {
-    float: left; 
+    float: left;
     padding-top: 5px;
     padding-bottom: 0;
-    
+
 }
 
 .navbar-logo img {
-    height: 50px; 
+    height: 50px;
     width: auto;
 }
 
 .navbar-toggler {
-    float: right; 
-    display: none; 
+    float: right;
+    display: none;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 0.55)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-    
+
 }
 
 #navbarNav {
-    float: right; 
+    float: right;
 }
 
 .navbar-nav-custom {
     list-style: none;
     margin: 0;
     padding: 0;
-    margin-top: 10px; 
+    margin-top: 10px;
 }
 
 .navbar-nav-custom .nav-item {
-    float: left; 
+    float: left;
     margin-left: 20px;
 }
 
@@ -86,11 +87,12 @@ div>h3.central{
 
 .navbar-nav-custom .nav-link.active,
 .navbar-nav-custom .nav-link:hover {
-    color: #007bff; 
+    color: #007bff;
 }
+
 @media (min-width: 992px) {
     #navbarNav {
-        display: block; 
+        display: block;
     }
 }
 
@@ -98,13 +100,13 @@ div>h3.central{
     .navbar-toggler {
         display: block;
         margin-top: 15px;
-    
+
     }
 
     #navbarNav {
-        float: none; 
+        float: none;
         width: 100%;
-        clear: both; 
+        clear: both;
         background-color: #f8f9fa;
     }
 
@@ -117,21 +119,26 @@ div>h3.central{
     }
 
     .navbar-nav-custom .nav-item {
-        float: none; 
+        float: none;
         margin-left: 0;
         text-align: center;
         border-top: 1px solid #e7e7e7;
     }
-    
+
     .navbar-nav-custom .nav-item a {
         padding: 12px 0;
-        display: block; 
+        display: block;
     }
-    footer{
-        margin-top: 50px;
+
+    footer {
+        background-color: #384734;
         height: auto;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+
     }
-    
+
 }
 
 
@@ -142,6 +149,9 @@ div>h3.central{
 footer{
     background-color: #384734;
     height: auto;
+    position: fixed; 
+    bottom: 0;
+    width: 100%;
     
 }
 
@@ -151,8 +161,3 @@ footer{
     margin-bottom: 20px;
     color: var(--cor-principal)
 }
-
-
-
-
-
