--- a/estrutura interna/estilo-restrito.css
+++ b/estrutura interna/estilo-restrito.css
@@ -6,11 +6,10 @@
 }
 
 header.head-top {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     background-color: var(--cor-principal);
     height: 3rem;
+    line-height: 3rem;
 }
 
 h1 {
@@ -32,11 +31,7 @@ body {
     background-color: var(--cor-branca);
     border-bottom: 1px solid var(--cor-fundo-claro);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: row;
     padding: 0px;
-    flex-wrap: wrap;
-    justify-content: center;
     margin-bottom: 20px;
 }
 
